# MusicMateAI

./: .gitignore  Dockerfile  README.md  advanced_retrieval.py  docker-compose.yml  env.example  nginx.conf  pyproject.toml  requirements.txt  start.sh
backend/: clean_markdown.py  main.py  midi_processor.py  rag.py
backend/uploads/: running.mid
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatMessage.tsx  FileUpload.tsx  ToolSelector.tsx
unstructured_data/PDMX_json_data/: pdmx_sample_1.json  pdmx_sample_2.json  pdmx_sample_3.json  pdmx_sample_4.json  pdmx_sample_5.json  pdmx_sample_6.json
unstructured_data/logic_fcpxml_data/project_data/: random.fcpxml  running.fcpxml
unstructured_data/logic_fcpxml_data/synthetic_project_data/: housegroove.fcpxml  lofistyle.fcpxml  pophook.fcpxml
